--- a/node22.html
+++ b/node22.html
@@ -377,7 +377,7 @@ storage space requirements.
 <I>A packrat parser is a form of parser
 similar to a recursive descent parser in construction, except that
 during the parsing process <SPAN ID="cbox3550">
-<FONT COLOR="#ffff00"> it memoizes</FONT></SPAN>
+<FONT COLOR="#ee82ee"> it memoizes</FONT></SPAN>
 the intermediate results of all
 invocations of the mutually recursive parsing functions</I>, ensuring that
 each parsing function is only invoked at most once at a given input
