--- a/node17.html
+++ b/node17.html
@@ -194,7 +194,8 @@ Douglas Crockford escribió su analizador léxico
   HREF="https://github.com/douglascrockford/TDOP/blob/master/tokens.js">tokens.js</A>
 sin usar expresiones regulares.
 Eso hace que sea extenso (268 líneas). Su analizador es un subconjunto de JS que no tiene 
-- entre otras cosas - expresiones regulares y uno de sus objetivos era que el analizador 
+- entre otras cosas - expresiones regulares ya que
+uno de sus objetivos era que el analizador 
 se analizara a si mismo.
 
 <P>
@@ -355,7 +356,7 @@ en JS. Vea este
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2014-02-27</I>
+2014-03-07</I>
 </ADDRESS>
 </BODY>
 </HTML>
