--- a/node23.html
+++ b/node23.html
@@ -174,7 +174,10 @@ En este método se escribe una rutina <code>A</code> por variable sintáctica <S
  SRC="img38.png"
  ALT="$ A \in V$"></SPAN>. 
 Se le da a la rutina asociada el mismo nombre que a la variable sintáctica
-asociada. La función de la rutina <code>A</code> asociada con la variable
+asociada. 
+
+<P>
+La función de la rutina <code>A</code> asociada con la variable
 <SPAN CLASS="MATH"><IMG
  WIDTH="53" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img38.png"
@@ -185,6 +188,8 @@ asociada. La función de la rutina <code>A</code> asociada con la variable
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN>.
+
+<P>
 La estrategia general que sigue la rutina <code>A</code> para reconocer
 <SPAN CLASS="MATH"><IMG
  WIDTH="43" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
@@ -205,12 +210,18 @@ a continuación comprobar que la entrada que sigue pertenece al lenguaje generad
  WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img42.png"
  ALT="$ \alpha$"></SPAN>. 
-En un analizador predictivo descendente recursivo (APDR) se asume que el símbolo que actualmente 
-esta siendo observado (denotado <code>lookahead</code>) permite determinar unívocamente
+
+<P>
+En un analizador predictivo descendente recursivo (APDR) se asume que
+el símbolo que actualmente
+esta siendo observado (denotado habitualmente como 
+<code>lookahead</code>) permite determinar unívocamente
 que producción de <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN> hay que aplicar. 
+
+<P>
 Una vez que se ha determinado que la regla por la que continuar la derivación
 es <!-- MATH
  $A \rightarrow \alpha$
@@ -648,7 +659,7 @@ analizador descendente predictivo recursivo? ¿En que orden son visitados los no
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2014-02-27</I>
+2014-03-07</I>
 </ADDRESS>
 </BODY>
 </HTML>
