--- a/node23.html
+++ b/node23.html
@@ -268,9 +268,10 @@ simplificaremos la gramática presentada en el ejercicio
 <A HREF="node38.html#ejercicio:tutugrammar">4.1.1</A> eliminando las declaraciones:
 
 <P>
+<DIV ALIGN="CENTER">
 <BR>
 <BR>
-<TABLE CELLPADDING=3>
+<TABLE CELLPADDING=3 BORDER="1">
 <TR><TD ALIGN="LEFT">statements   <!-- MATH
  $\rightarrow$
  -->
@@ -281,6 +282,7 @@ simplificaremos la gramática presentada en el ejercicio
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
  ALT="$ \vert$"></SPAN> statement</TD>
+<TD ALIGN="LEFT">&nbsp;</TD>
 </TR>
 <TR><TD ALIGN="LEFT">statement    <!-- MATH
  $\rightarrow$
@@ -292,6 +294,7 @@ simplificaremos la gramática presentada en el ejercicio
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
  ALT="$ \vert$"></SPAN> P  expression</TD>
+<TD ALIGN="LEFT">&nbsp;</TD>
 </TR>
 <TR><TD ALIGN="LEFT">expression   <!-- MATH
  $\rightarrow$
@@ -303,6 +306,7 @@ simplificaremos la gramática presentada en el ejercicio
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
  ALT="$ \vert$"></SPAN> term</TD>
+<TD ALIGN="LEFT">&nbsp;</TD>
 </TR>
 <TR><TD ALIGN="LEFT">term         <!-- MATH
  $\rightarrow$
@@ -314,6 +318,7 @@ simplificaremos la gramática presentada en el ejercicio
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
  ALT="$ \vert$"></SPAN> factor</TD>
+<TD ALIGN="LEFT">&nbsp;</TD>
 </TR>
 <TR><TD ALIGN="LEFT">factor       <!-- MATH
  $\rightarrow$
@@ -328,8 +333,10 @@ simplificaremos la gramática presentada en el ejercicio
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
  ALT="$ \vert$"></SPAN> NUM</TD>
+<TD ALIGN="LEFT">&nbsp;</TD>
 </TR>
 </TABLE>
+</DIV>
 <BR>
 <BR>
 
@@ -574,7 +581,7 @@ en una secuencia <!-- MATH
 <P>
 
 <H2><A NAME="SECTION04322000000000000000"></A>
-   <A NAME="3706"></A>
+   <A NAME="3708"></A>
 <BR>
 Ejercicio: Recorrido del árbol en un ADPR
 </H2>
