--- a/node23.html
+++ b/node23.html
@@ -579,11 +579,11 @@ este seudocódigo:
 </FONT></FONT>
 <P>
 <FONT COLOR="#ff0000"></FONT><PRE>
-sub A {
-  if ($lookahead in FIRST(gamma_1)) { imitar gamma_1 }
-  elsif ($lookahead in FIRST(gamma_2)) { imitar gamma_2 }
+A = function() {
+  if (lookahead in FIRST(gamma_1)) { imitar gamma_1 }
+  elsif (lookahead in FIRST(gamma_2)) { imitar gamma_2 }
   ...
-  else ($lookahead in FIRST(gamma_n)) { imitar gamma_n }
+  else (lookahead in FIRST(gamma_n)) { imitar gamma_n }
 }
 </PRE><FONT COLOR="#ff0000"></FONT>
 <P>
