--- a/node29.html
+++ b/node29.html
@@ -152,7 +152,7 @@ para el caso directo.
 <SPAN CLASS="MATH"><IMG
  WIDTH="91" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img88.png"
- ALT="\bgroup\color{red}$ A \rightarrow A \alpha \vert\ \beta$\egroup"></SPAN></FONT> 
+ ALT="\bgroup\color{red}$ A \rightarrow A \alpha \vert \beta$\egroup"></SPAN></FONT> 
 </FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
 <P>
 <FONT COLOR="#ff0000"><FONT COLOR="#ff0000">donde 
