--- a/node30.html
+++ b/node30.html
@@ -168,7 +168,7 @@ para el caso directo.
 <SPAN CLASS="MATH"><IMG
  WIDTH="91" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img88.png"
- ALT="\bgroup\color{red}$ A \rightarrow A \alpha \vert\ \beta$\egroup"></SPAN></FONT> 
+ ALT="\bgroup\color{red}$ A \rightarrow A \alpha \vert \beta$\egroup"></SPAN></FONT> 
 </FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
 <P>
 <FONT COLOR="#ff0000"><FONT COLOR="#ff0000">donde 
@@ -209,7 +209,7 @@ Estas dos producciones pueden ser sustituidas por:
 <SPAN CLASS="MATH"><IMG
  WIDTH="93" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img92.png"
- ALT="\bgroup\color{red}$ R \rightarrow \alpha R\ \vert\ \epsilon$\egroup"></SPAN></FONT></FONT></FONT></TD>
+ ALT="\bgroup\color{red}$ R \rightarrow \alpha R \vert \epsilon$\egroup"></SPAN></FONT></FONT></FONT></TD>
 </TR>
 </TABLE><FONT COLOR="#ff0000"></FONT></DIV><FONT COLOR="#ff0000"></FONT>
 <P>
