--- a/node42.html
+++ b/node42.html
@@ -621,7 +621,7 @@ de
 <SPAN CLASS="MATH"><IMG
  WIDTH="287" HEIGHT="42" ALIGN="MIDDLE" BORDER="0"
  SRC="img189.png"
- ALT="\bgroup\color{red}$ \overline{A} = \{ q \in Q\ /\ \exists q' \in Q\ :\ \hat{\delta}(q', \epsilon) = q \}$\egroup"></SPAN></FONT></FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
+ ALT="\bgroup\color{red}$ \overline{A} = \{ q \in Q / \exists q' \in Q : \hat{\delta}(q', \epsilon) = q \}$\egroup"></SPAN></FONT></FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
 <P>
 <FONT COLOR="#ff0000"><FONT COLOR="#ff0000">Aquí 
 <FONT COLOR="#ff0000"><!-- MATH
@@ -800,7 +800,7 @@ se denominan <A NAME="5362"></A><SPAN  CLASS="textbf">acciones de desplazamiento
 <SPAN CLASS="MATH"><IMG
  WIDTH="211" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img201.png"
- ALT="\bgroup\color{red}$ action(i, a) = shift\ \delta(a,I_i)$\egroup"></SPAN></FONT></FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
+ ALT="\bgroup\color{red}$ action(i, a) = shift \delta(a,I_i)$\egroup"></SPAN></FONT></FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
 <P>
 <FONT COLOR="#ff0000"><FONT COLOR="#ff0000">Cuando un estado 
 <FONT COLOR="#ff0000"><SPAN CLASS="MATH"><IMG
@@ -870,7 +870,7 @@ la acción para
 <SPAN CLASS="MATH"><IMG
  WIDTH="221" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img206.png"
- ALT="\bgroup\color{red}$ action(i, a) = reduce\ A \rightarrow \alpha$\egroup"></SPAN></FONT> ¿Pero, para que 
+ ALT="\bgroup\color{red}$ action(i, a) = reduce A \rightarrow \alpha$\egroup"></SPAN></FONT> ¿Pero, para que 
 <FONT COLOR="#ff0000"><!-- MATH
  $a \in \Sigma$
  -->
@@ -915,8 +915,8 @@ de
 <SPAN CLASS="MATH"><IMG
  WIDTH="228" HEIGHT="82" ALIGN="MIDDLE" BORDER="0"
  SRC="img208.png"
- ALT="\bgroup\color{red}$ \exists S \begin{array}{c} *\\ \Longrightarrow \\ {\scriptst...
-...ngrightarrow \\ {\scriptstyle RM} \end{array}
+ ALT="\bgroup\color{red}$ \exists S \begin{array}{c} *\ \Longrightarrow \ {\scriptst...
+...ngrightarrow \ {\scriptstyle RM} \end{array}
 \beta \alpha b x = \gamma$\egroup"></SPAN></FONT></FONT></FONT></DIV><FONT COLOR="#ff0000"></FONT>
 <P>
 <FONT COLOR="#ff0000"><FONT COLOR="#ff0000">Por tanto, cuando estamos reduciendo por 
@@ -952,7 +952,7 @@ los únicos terminales legales que cabe esperar en una reducción por
 <SPAN CLASS="MATH"><IMG
  WIDTH="219" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img210.png"
- ALT="\bgroup\color{red}$ action(i, b) = reduce\ A \rightarrow \alpha$\egroup"></SPAN></FONT> Para 
+ ALT="\bgroup\color{red}$ action(i, b) = reduce A \rightarrow \alpha$\egroup"></SPAN></FONT> Para 
 <FONT COLOR="#ff0000"><!-- MATH
  $b \in FOLLOW(A)$
  -->
