--- a/node24.html
+++ b/node24.html
@@ -124,10 +124,12 @@ que se encuentra en:
 <P>
 
 <UL>
-<LI><A NAME="tex2html146"
+<LI>Despliegue en Heroku:
+<A NAME="tex2html146"
   HREF="http://predictiveparser.herokuapp.com/">http://predictiveparser.herokuapp.com/</A>
 </LI>
-<LI><A NAME="tex2html147"
+<LI>Repositorio en GitHub:
+<A NAME="tex2html147"
   HREF="https://github.com/crguezl/prdcalc">https://github.com/crguezl/prdcalc</A>
 </LI>
 </UL>
