--- a/node43.html
+++ b/node43.html
@@ -884,8 +884,8 @@ de <SPAN CLASS="MATH"><IMG
 <SPAN CLASS="MATH"><IMG
  WIDTH="228" HEIGHT="82" ALIGN="MIDDLE" BORDER="0"
  SRC="img183.png"
- ALT="$ \exists S \begin{array}{c} *\ \Longrightarrow \ {\scriptstyle RM} \end{array...
-...*\ \Longrightarrow \ {\scriptstyle RM} \end{array}
+ ALT="$ \exists S \begin{array}{c} * \Longrightarrow  {\scriptstyle RM} \end{array...
+...* \Longrightarrow  {\scriptstyle RM} \end{array}
 \beta \alpha b x = \gamma$"></SPAN>
 </DIV>
 
