--- a/node24.html
+++ b/node24.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1127"
+<A NAME="tex2html1128"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1121"
+<A NAME="tex2html1122"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1115"
+<A NAME="tex2html1116"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1123"
+<A NAME="tex2html1124"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1125"
+<A NAME="tex2html1126"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1128"
+<B> Sig:</B> <A NAME="tex2html1129"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1122"
+<B>Sup:</B> <A NAME="tex2html1123"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1116"
+<B> Ant:</B> <A NAME="tex2html1117"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B> Con:</B> 
-<A NAME="tex2html1123"
+<A NAME="tex2html1124"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1125"
+<A NAME="tex2html1126"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04330000000000000000"></A>
-   <A NAME="3773"></A>
+   <A NAME="3774"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -145,32 +145,35 @@ correcta
   HREF="http://slim-lang.com/">slim</A>
  traduciendo la parte que está actualmente en
 <A NAME="tex2html149"
-  HREF="http://en.wikipedia.org/wiki/ERuby">erb</A>a (fichero <code>views/home.slim</code>)
+  HREF="http://en.wikipedia.org/wiki/ERuby">erb</A>
+a  <A NAME="tex2html150"
+  HREF="http://slim-lang.com/">slim</A>
+ (fichero <code>views/home.slim</code>)
 </LI>
-<LI>Pase a  <A NAME="tex2html150"
+<LI>Pase a  <A NAME="tex2html151"
   HREF="http://coffeescript.org/">CoffeeScript</A>
  el mayor número de rutinas que pueda (fichero
 <code>views/main.coffee</code>)
 </LI>
 <LI>Despliegue la aplicación en Heroku
 </LI>
-<LI>Pruebas
+<LI>Añada pruebas
 </LI>
 </UL>
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1127"
+<A NAME="tex2html1128"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1121"
+<A NAME="tex2html1122"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1115"
+<A NAME="tex2html1116"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1123"
+<A NAME="tex2html1124"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1125"
+<A NAME="tex2html1126"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -222,11 +225,11 @@ correcta
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1128"
+<B> Sig:</B> <A NAME="tex2html1129"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1122"
+<B>Sup:</B> <A NAME="tex2html1123"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1116"
+<B> Ant:</B> <A NAME="tex2html1117"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 </DIV>
 <!--End of Navigation Panel-->
