--- a/node24.html
+++ b/node24.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1128"
+<A NAME="tex2html1129"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1122"
+<A NAME="tex2html1123"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1116"
+<A NAME="tex2html1117"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1124"
+<A NAME="tex2html1125"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1126"
+<A NAME="tex2html1127"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,26 +92,37 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1129"
+<B> Sig:</B> <A NAME="tex2html1130"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1123"
+<B>Sup:</B> <A NAME="tex2html1124"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1117"
+<B> Ant:</B> <A NAME="tex2html1118"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B> Con:</B> 
-<A NAME="tex2html1124"
+<A NAME="tex2html1125"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1126"
+<A NAME="tex2html1127"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><UL>
+<LI><UL>
+<LI><A NAME="tex2html1131"
+  HREF="node24.html#SECTION04330010000000000000">Tareas</A>
+</UL></UL></UL>
+<!--End of Table of Child-Links-->
+<HR>
 
 <H1><A NAME="SECTION04330000000000000000"></A>
-   <A NAME="3774"></A>
+   <A NAME="3775"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -135,6 +146,12 @@ que se encuentra en:
 </UL>
 
 <P>
+
+<H4><A NAME="SECTION04330010000000000000">
+Tareas</A>
+</H4>
+  
+
 Añada:
 
 <UL>
@@ -164,19 +181,19 @@ a  <A NAME="tex2html150"
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1128"
+<A NAME="tex2html1129"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1122"
+<A NAME="tex2html1123"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1116"
+<A NAME="tex2html1117"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1124"
+<A NAME="tex2html1125"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1126"
+<A NAME="tex2html1127"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -228,11 +245,11 @@ a  <A NAME="tex2html150"
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1129"
+<B> Sig:</B> <A NAME="tex2html1130"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1123"
+<B>Sup:</B> <A NAME="tex2html1124"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1117"
+<B> Ant:</B> <A NAME="tex2html1118"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 </DIV>
 <!--End of Navigation Panel-->
