--- a/node24.html
+++ b/node24.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1129"
+<A NAME="tex2html1130"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1123"
+<A NAME="tex2html1124"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1117"
+<A NAME="tex2html1118"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1125"
+<A NAME="tex2html1126"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1127"
+<A NAME="tex2html1128"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1130"
+<B> Sig:</B> <A NAME="tex2html1131"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1124"
+<B>Sup:</B> <A NAME="tex2html1125"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1118"
+<B> Ant:</B> <A NAME="tex2html1119"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B> Con:</B> 
-<A NAME="tex2html1125"
+<A NAME="tex2html1126"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1127"
+<A NAME="tex2html1128"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,14 +115,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1131"
-  HREF="node24.html#SECTION04330010000000000000">Tareas</A>
+<LI><A NAME="tex2html1132"
+  HREF="node24.html#SECTION04330010000000000000">Donde</A>
+<LI><A NAME="tex2html1133"
+  HREF="node24.html#SECTION04330020000000000000">Tareas</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04330000000000000000"></A>
-   <A NAME="3775"></A>
+   <A NAME="3778"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -130,7 +132,15 @@ Práctica: Analizador Descendente Predictivo Recursivo
 <P>
 Partiendo del analizador sintáctico descendente predictivo recursivo para la gramática
 descrita en la sección <A HREF="node23.html#table:gramaticasimple">3.2.1</A>
-que se encuentra en:
+
+<P>
+
+<H4><A NAME="SECTION04330010000000000000">
+Donde</A>
+</H4>
+  
+
+Puede encontrar la versión de la que partir eN
 
 <P>
 
@@ -143,11 +153,21 @@ que se encuentra en:
 <A NAME="tex2html147"
   HREF="https://github.com/crguezl/prdcalc">https://github.com/crguezl/prdcalc</A>
 </LI>
+<LI><PRE>
+[~/javascript/PLgrado/predictiveRD/prdcalc(develop)]$ pwd -P
+/Users/casiano/local/src/javascript/PLgrado/predictiveRD/prdcalc
+[~/javascript/PLgrado/predictiveRD/prdcalc(develop)]$ git remote -v
+heroku  git@heroku.com:predictiveparser.git (fetch)
+heroku  git@heroku.com:predictiveparser.git (push)
+origin  git@github.com:crguezl/prdcalc.git (fetch)
+origin  git@github.com:crguezl/prdcalc.git (push)
+</PRE>
+</LI>
 </UL>
 
 <P>
 
-<H4><A NAME="SECTION04330010000000000000">
+<H4><A NAME="SECTION04330020000000000000">
 Tareas</A>
 </H4>
   
@@ -181,19 +201,19 @@ a  <A NAME="tex2html150"
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1129"
+<A NAME="tex2html1130"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1123"
+<A NAME="tex2html1124"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1117"
+<A NAME="tex2html1118"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1125"
+<A NAME="tex2html1126"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1127"
+<A NAME="tex2html1128"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -245,11 +265,11 @@ a  <A NAME="tex2html150"
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1130"
+<B> Sig:</B> <A NAME="tex2html1131"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1124"
+<B>Sup:</B> <A NAME="tex2html1125"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1118"
+<B> Ant:</B> <A NAME="tex2html1119"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 </DIV>
 <!--End of Navigation Panel-->
