--- a/node24.html
+++ b/node24.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1134"
+<A NAME="tex2html1136"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1128"
+<A NAME="tex2html1130"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1122"
+<A NAME="tex2html1124"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1130"
+<A NAME="tex2html1132"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1132"
+<A NAME="tex2html1134"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1135"
+<B> Sig:</B> <A NAME="tex2html1137"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1129"
+<B>Sup:</B> <A NAME="tex2html1131"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1123"
+<B> Ant:</B> <A NAME="tex2html1125"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B> Con:</B> 
-<A NAME="tex2html1130"
+<A NAME="tex2html1132"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1132"
+<A NAME="tex2html1134"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,18 +115,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1136"
-  HREF="node24.html#SECTION04330010000000000000">Donde</A>
-<LI><A NAME="tex2html1137"
-  HREF="node24.html#SECTION04330020000000000000">Tareas</A>
 <LI><A NAME="tex2html1138"
-  HREF="node24.html#SECTION04330030000000000000">Slim</A>
+  HREF="node24.html#SECTION04330010000000000000">Donde</A>
+<LI><A NAME="tex2html1139"
+  HREF="node24.html#SECTION04330020000000000000">Tareas</A>
+<LI><A NAME="tex2html1140"
+  HREF="node24.html#SECTION04330030000000000000">Sass</A>
+<LI><A NAME="tex2html1141"
+  HREF="node24.html#SECTION04330040000000000000">Slim</A>
+<LI><A NAME="tex2html1142"
+  HREF="node24.html#SECTION04330050000000000000">CoffeeScript</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04330000000000000000"></A>
-   <A NAME="3786"></A>
+   <A NAME="3799"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -180,16 +184,7 @@ Añada:
 <LI>Restas y divisiones. Procure que el arbol generado refleje la asociatividad 
 correcta
 </LI>
-<LI>Complete el template  <A NAME="tex2html148"
-  HREF="http://slim-lang.com/">slim</A>
- traduciendo la parte que está actualmente en
-<A NAME="tex2html149"
-  HREF="http://en.wikipedia.org/wiki/ERuby">erb</A>
-a  <A NAME="tex2html150"
-  HREF="http://slim-lang.com/">slim</A>
- (fichero <code>views/home.slim</code>)
-</LI>
-<LI>Pase a  <A NAME="tex2html151"
+<LI>Pase a  <A NAME="tex2html148"
   HREF="http://coffeescript.org/">CoffeeScript</A>
  el mayor número de rutinas que pueda (fichero
 <code>views/main.coffee</code>)
@@ -203,6 +198,22 @@ a  <A NAME="tex2html150"
 <P>
 
 <H4><A NAME="SECTION04330030000000000000">
+Sass</A>
+</H4>
+  
+
+<P>
+
+<OL>
+<LI><A NAME="tex2html149"
+  HREF="http://sass-lang.com/">Sass</A>
+
+</LI>
+</OL>
+
+<P>
+
+<H4><A NAME="SECTION04330040000000000000">
 Slim</A>
 </H4>
   
@@ -210,34 +221,52 @@ Slim</A>
 <P>
 
 <OL>
-<LI><A NAME="tex2html152"
+<LI><A NAME="tex2html150"
   HREF="http://slim-lang.com/">slim</A>
 
 </LI>
-<LI><A NAME="tex2html153"
+<LI><A NAME="tex2html151"
   HREF="http://rdoc.info/gems/slim/frames">Slim docs</A>
 </LI>
-<LI><A NAME="tex2html154"
+<LI><A NAME="tex2html152"
   HREF="https://github.com/slim-template/html2slim">html2slim</A>
 </LI>
 </OL>
 
 <P>
 
+<H4><A NAME="SECTION04330050000000000000">
+CoffeeScript</A>
+</H4>
+  
+
+<P>
+
+<OL>
+<LI><A NAME="tex2html153"
+  HREF="http://coffeescriptcookbook.com/">CoffeeScript Cookbook</A>
+</LI>
+<LI><A NAME="tex2html154"
+  HREF="http://js2coffee.org/">js2coffee.org</A>
+</LI>
+</OL>
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1134"
+<A NAME="tex2html1136"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1128"
+<A NAME="tex2html1130"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1122"
+<A NAME="tex2html1124"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1130"
+<A NAME="tex2html1132"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1132"
+<A NAME="tex2html1134"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -289,11 +318,11 @@ Slim</A>
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1135"
+<B> Sig:</B> <A NAME="tex2html1137"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1129"
+<B>Sup:</B> <A NAME="tex2html1131"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1123"
+<B> Ant:</B> <A NAME="tex2html1125"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 </DIV>
 <!--End of Navigation Panel-->
