--- a/node24.html
+++ b/node24.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1136"
+<A NAME="tex2html1137"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1130"
+<A NAME="tex2html1131"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1124"
+<A NAME="tex2html1125"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1132"
+<A NAME="tex2html1133"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1134"
+<A NAME="tex2html1135"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1137"
+<B> Sig:</B> <A NAME="tex2html1138"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1131"
+<B>Sup:</B> <A NAME="tex2html1132"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1125"
+<B> Ant:</B> <A NAME="tex2html1126"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 <B> Con:</B> 
-<A NAME="tex2html1132"
+<A NAME="tex2html1133"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1134"
+<A NAME="tex2html1135"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,22 +115,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1138"
-  HREF="node24.html#SECTION04330010000000000000">Donde</A>
 <LI><A NAME="tex2html1139"
-  HREF="node24.html#SECTION04330020000000000000">Tareas</A>
+  HREF="node24.html#SECTION04330010000000000000">Donde</A>
 <LI><A NAME="tex2html1140"
-  HREF="node24.html#SECTION04330030000000000000">Sass</A>
+  HREF="node24.html#SECTION04330020000000000000">Tareas</A>
 <LI><A NAME="tex2html1141"
-  HREF="node24.html#SECTION04330040000000000000">Slim</A>
+  HREF="node24.html#SECTION04330030000000000000">Sass</A>
 <LI><A NAME="tex2html1142"
+  HREF="node24.html#SECTION04330040000000000000">Slim</A>
+<LI><A NAME="tex2html1143"
   HREF="node24.html#SECTION04330050000000000000">CoffeeScript</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04330000000000000000"></A>
-   <A NAME="3799"></A>
+   <A NAME="3800"></A>
 <BR>
 Práctica: Analizador Descendente Predictivo Recursivo
 </H1>
@@ -189,6 +189,10 @@ correcta
  el mayor número de rutinas que pueda (fichero
 <code>views/main.coffee</code>)
 </LI>
+<LI>Usa  <A NAME="tex2html149"
+  HREF="http://sass-lang.com/">Sass</A>
+ para las hojas de estilo
+</LI>
 <LI>Despliegue la aplicación en Heroku
 </LI>
 <LI>Añada pruebas
@@ -205,7 +209,7 @@ Sass</A>
 <P>
 
 <OL>
-<LI><A NAME="tex2html149"
+<LI><A NAME="tex2html150"
   HREF="http://sass-lang.com/">Sass</A>
 
 </LI>
@@ -221,14 +225,14 @@ Slim</A>
 <P>
 
 <OL>
-<LI><A NAME="tex2html150"
+<LI><A NAME="tex2html151"
   HREF="http://slim-lang.com/">slim</A>
 
 </LI>
-<LI><A NAME="tex2html151"
+<LI><A NAME="tex2html152"
   HREF="http://rdoc.info/gems/slim/frames">Slim docs</A>
 </LI>
-<LI><A NAME="tex2html152"
+<LI><A NAME="tex2html153"
   HREF="https://github.com/slim-template/html2slim">html2slim</A>
 </LI>
 </OL>
@@ -243,10 +247,10 @@ CoffeeScript</A>
 <P>
 
 <OL>
-<LI><A NAME="tex2html153"
+<LI><A NAME="tex2html154"
   HREF="http://coffeescriptcookbook.com/">CoffeeScript Cookbook</A>
 </LI>
-<LI><A NAME="tex2html154"
+<LI><A NAME="tex2html155"
   HREF="http://js2coffee.org/">js2coffee.org</A>
 </LI>
 </OL>
@@ -254,19 +258,19 @@ CoffeeScript</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1136"
+<A NAME="tex2html1137"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1130"
+<A NAME="tex2html1131"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1124"
+<A NAME="tex2html1125"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1132"
+<A NAME="tex2html1133"
   HREF="node87.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1134"
+<A NAME="tex2html1135"
   HREF="node90.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -318,11 +322,11 @@ CoffeeScript</A>
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1137"
+<B> Sig:</B> <A NAME="tex2html1138"
   HREF="node25.html">Esquemas de Traducción</A>
-<B>Sup:</B> <A NAME="tex2html1131"
+<B>Sup:</B> <A NAME="tex2html1132"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1125"
+<B> Ant:</B> <A NAME="tex2html1126"
   HREF="node23.html">Análisis Sintáctico Predictivo Recursivo</A>
 </DIV>
 <!--End of Navigation Panel-->
