--- a/node23.html
+++ b/node23.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Recursión por la Izquierda</TITLE>
-<META NAME="description" CONTENT="Recursión por la Izquierda">
+<TITLE>Esquemas de Traducción</TITLE>
+<META NAME="description" CONTENT="Esquemas de Traducción">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -96,7 +96,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html1087"
   HREF="node18.html">Analizadores Descendentes Predictivos</A>
 <B> Ant:</B> <A NAME="tex2html1083"
-  HREF="node22.html">Esquemas de Traducción</A>
+  HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 <B> Con:</B> 
 <A NAME="tex2html1088"
   HREF="node88.html">
@@ -110,46 +110,123 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04250000000000000000"></A>
-<A NAME="section:recursionizquierda"></A>
+<A NAME="section:esquemas"></A>
 <BR>
-Recursión por la Izquierda
+Esquemas de Traducción
 </H1>
-
-<P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="3491"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Un <A NAME="3491"></A><SPAN  CLASS="textbf">esquema de traducción</SPAN> es una gramática independiente del contexto
+en la cual se han insertado fragmentos de código en las partes derechas
+de sus reglas de producción. Los fragmentos de código asi insertados 
+se denominan <A NAME="3493"></A><SPAN  CLASS="textbf">acciones semánticas</SPAN>. Dichos fragmentos actúan, calculan
+y modifican los atributos asociados con los nodos del árbol sintáctico. 
+El orden en que se evalúan los fragmentos
+es el de un recorrido primero-profundo del árbol de análisis sintáctico.</I></DIV><P></P>
+Obsérvese que, en general, para poder aplicar un esquema de traducción hay 
+que construir el árbol sintáctico y después aplicar las acciones empotradas
+en las reglas en el orden de recorrido primero-profundo. Por supuesto, si 
+la gramática es ambigua una frase podría tener dos árboles y la ejecución de las
+acciones para ellos podría dar lugar a diferentes resultados. Si se quiere
+evitar la multiplicidad de resultados (interpretaciones semánticas)
+es necesario precisar de que árbol sintáctico concreto se esta hablando.
+
+<P>
+Por ejemplo, si en la regla <!-- MATH
+ $A \rightarrow \alpha \beta$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="67" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
+ SRC="img59.png"
+ ALT="$ A \rightarrow \alpha \beta $"></SPAN>
+insertamos un fragmento de código:
+
+<P>
+<DIV ALIGN="CENTER">
 <!-- MATH
- $A \stackrel{*}{\Longrightarrow} A \alpha$
+ $A \rightarrow \alpha \{ action \} \beta$
  -->
 <SPAN CLASS="MATH"><IMG
- WIDTH="80" HEIGHT="24" ALIGN="BOTTOM" BORDER="0"
+ WIDTH="132" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img60.png"
+ ALT="$ A \rightarrow \alpha \{ action \} \beta $"></SPAN>
+</DIV>
+
+<P>
+La acción <!-- MATH
+ $\{ action \}$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="70" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img61.png"
+ ALT="$ \{ action \}$"></SPAN> se ejecutará después de todas las acciones
+asociadas con el recorrido del subárbol de <SPAN CLASS="MATH"><IMG
+ WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img42.png"
+ ALT="$ \alpha$"></SPAN> y antes que todas
+las acciones asociadas con el recorrido del subárbol <SPAN CLASS="MATH"><IMG
+ WIDTH="16" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
+ SRC="img62.png"
+ ALT="$ \beta$"></SPAN>.
+
+<P>
+El siguiente esquema de traducción recibe como entrada una expresión en infijo
+y produce como salida su traducción a postfijo para expresiones aritmeticas con sólo 
+restas de números:
+
+<P>
+<BR>
+<BR>
+<TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT"><!-- MATH
+ $expr   \rightarrow expr_1  -  NUM$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="179" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
+ SRC="img63.png"
+ ALT="$ expr \rightarrow expr_1 - NUM$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ $expr{TRA} = $expr[1]{TRA}." ".$NUM{VAL}." - "}</code></TD>
+</TR>
+<TR><TD ALIGN="LEFT"><!-- MATH
+ $expr   \rightarrow NUM$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="116" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
+ SRC="img64.png"
+ ALT="$ expr \rightarrow NUM$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ $expr{TRA} = $NUM{VAL} }</code></TD>
+</TR>
+</TABLE>
+<BR>
+<BR>
+
+<P>
+Las apariciones de variables sintácticas en una regla de producción se indexan
+como se ve en el ejemplo, para distinguir de que nodo del árbol de análisis estamos
+hablando. Cuando hablemos del atributo de un nodo utilizaremos una indexación tipo
+<SPAN  CLASS="textbf">hash</SPAN>. Aquí <code>VAL</code> es un atributo de los nodos de tipo <SPAN CLASS="MATH"><IMG
+ WIDTH="53" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img65.png"
- ALT="$ A \stackrel{*}{\Longrightarrow} A \alpha$"></SPAN>. 
-</I>
-<P>
-<I>En particular, es recursiva por la izquierda si contiene
-una regla de producción de la forma <!-- MATH
- $A \rightarrow A \alpha$
- -->
-<SPAN CLASS="MATH"><IMG
- WIDTH="69" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
+ ALT="$ NUM$"></SPAN> denotando
+su valor numérico y para accederlo escribiremos <code>$NUM{VAL}</code>.
+Análogamente <code>$expr{TRA}</code> denota el atributo ``traducción'' de
+los nodos de tipo <SPAN CLASS="MATH"><IMG
+ WIDTH="40" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img66.png"
- ALT="$ A \rightarrow A \alpha$"></SPAN>. 
-En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
+ ALT="$ expr$"></SPAN>.
 
 <P>
-Cuando la gramática es <A NAME="3493"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
-el método 
-de análisis recursivo descendente predictivo no funciona. 
-En ese caso, el procedimiento
-<code>A</code> asociado con <SPAN CLASS="MATH"><IMG
- WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
- SRC="img1.png"
- ALT="$ A$"></SPAN> ciclaría para siempre sin llegar a consumir ningún 
-terminal. 
+<P>
+<DIV><B>Ejercicio  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
+<I>Muestre la secuencia de acciones a la
+que da lugar el esquema de traducción anterior 
+para la frase 7 -5 -4.</I></DIV><P></P>
 
 <P>
+En este ejemplo, el cómputo del atributo <code>$expr{TRA}</code> depende de los atributos
+en los nodos hijos, o lo que es lo mismo, depende de los atributos de los símbolos
+en la parte derecha de la regla de producción. Esto ocurre a menudo y motiva la siguiente
+definición:
 
 <P>
 
@@ -223,7 +300,7 @@ terminal.
 <B>Sup:</B> <A NAME="tex2html1087"
   HREF="node18.html">Analizadores Descendentes Predictivos</A>
 <B> Ant:</B> <A NAME="tex2html1083"
-  HREF="node22.html">Esquemas de Traducción</A>
+  HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
