--- a/node24.html
+++ b/node24.html
@@ -97,7 +97,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html1101"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html1095"
-  HREF="node23.html">Recursión por la Izquierda</A>
+  HREF="node23.html">Esquemas de Traducción</A>
 <B> Con:</B> 
 <A NAME="tex2html1102"
   HREF="node88.html">
@@ -200,7 +200,7 @@ Análisis Sintáctico Mediante Precedencia de Operadores en JavaScript</A>
 <B>Sup:</B> <A NAME="tex2html1101"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html1095"
-  HREF="node23.html">Recursión por la Izquierda</A>
+  HREF="node23.html">Esquemas de Traducción</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
