--- a/node20.html
+++ b/node20.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1046"
-  HREF="node21.html">Práctica: Analizador Descendente Predictivo</A>
+  HREF="node21.html">Recursión por la Izquierda</A>
 <B>Sup:</B> <A NAME="tex2html1040"
   HREF="node18.html">Analizadores Descendentes Predictivos</A>
 <B> Ant:</B> <A NAME="tex2html1034"
@@ -694,7 +694,7 @@ analizador descendente predictivo recursivo? ¿En que orden son visitados los no
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1046"
-  HREF="node21.html">Práctica: Analizador Descendente Predictivo</A>
+  HREF="node21.html">Recursión por la Izquierda</A>
 <B>Sup:</B> <A NAME="tex2html1040"
   HREF="node18.html">Analizadores Descendentes Predictivos</A>
 <B> Ant:</B> <A NAME="tex2html1034"
