--- a/node21.html
+++ b/node21.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Práctica: Analizador Descendente Predictivo Recursivo</TITLE>
-<META NAME="description" CONTENT="Práctica: Analizador Descendente Predictivo Recursivo">
+<TITLE>Recursión por la Izquierda</TITLE>
+<META NAME="description" CONTENT="Recursión por la Izquierda">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1062"
-  HREF="node22.html">Esquemas de Traducción</A>
+  HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 <B>Sup:</B> <A NAME="tex2html1056"
   HREF="node18.html">Analizadores Descendentes Predictivos</A>
 <B> Ant:</B> <A NAME="tex2html1050"
@@ -109,154 +109,46 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
-<!--Table of Child-Links-->
-<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
-
-<UL CLASS="ChildLinks">
-<LI><UL>
-<LI><UL>
-<LI><A NAME="tex2html1063"
-  HREF="node21.html#SECTION04230010000000000000">Donde</A>
-<LI><A NAME="tex2html1064"
-  HREF="node21.html#SECTION04230020000000000000">Tareas</A>
-<LI><A NAME="tex2html1065"
-  HREF="node21.html#SECTION04230030000000000000">Sass</A>
-<LI><A NAME="tex2html1066"
-  HREF="node21.html#SECTION04230040000000000000">Slim</A>
-<LI><A NAME="tex2html1067"
-  HREF="node21.html#SECTION04230050000000000000">CoffeeScript</A>
-</UL></UL></UL>
-<!--End of Table of Child-Links-->
-<HR>
 
 <H1><A NAME="SECTION04230000000000000000"></A>
-   <A NAME="3458"></A>
+<A NAME="section:recursionizquierda"></A>
 <BR>
-Práctica: Analizador Descendente Predictivo Recursivo
+Recursión por la Izquierda
 </H1>
 
 <P>
-Partiendo del analizador sintáctico descendente predictivo recursivo para la gramática
-descrita en la sección <A HREF="node20.html#table:gramaticasimple">2.2.1</A>
+<P>
+<DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
+<I>Una <A NAME="3457"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<!-- MATH
+ $A \stackrel{*}{\Longrightarrow} A \alpha$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="80" HEIGHT="24" ALIGN="BOTTOM" BORDER="0"
+ SRC="img57.png"
+ ALT="$ A \stackrel{*}{\Longrightarrow} A \alpha$"></SPAN>. 
+</I>
+<P>
+<I>En particular, es recursiva por la izquierda si contiene
+una regla de producción de la forma <!-- MATH
+ $A \rightarrow A \alpha$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="69" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
+ SRC="img58.png"
+ ALT="$ A \rightarrow A \alpha$"></SPAN>. 
+En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-
-<H4><A NAME="SECTION04230010000000000000">
-Donde</A>
-</H4>
-  
-
-Puede encontrar la versión de la que partir en
-
-<P>
-
-<UL>
-<LI>Despliegue en Heroku:
-<A NAME="tex2html132"
-  HREF="http://predictiveparser.herokuapp.com/">http://predictiveparser.herokuapp.com/</A>
-</LI>
-<LI>Repositorio en GitHub:
-<A NAME="tex2html133"
-  HREF="https://github.com/crguezl/prdcalc">https://github.com/crguezl/prdcalc</A>
-</LI>
-<LI><PRE>
-[~/javascript/PLgrado/predictiveRD/prdcalc(develop)]$ pwd -P
-/Users/casiano/local/src/javascript/PLgrado/predictiveRD/prdcalc
-[~/javascript/PLgrado/predictiveRD/prdcalc(develop)]$ git remote -v
-heroku  git@heroku.com:predictiveparser.git (fetch)
-heroku  git@heroku.com:predictiveparser.git (push)
-origin  git@github.com:crguezl/prdcalc.git (fetch)
-origin  git@github.com:crguezl/prdcalc.git (push)
-</PRE>
-</LI>
-</UL>
-
-<P>
-
-<H4><A NAME="SECTION04230020000000000000">
-Tareas</A>
-</H4>
-  
-
-Añada:
-
-<UL>
-<LI>Restas y divisiones. Procure que el arbol generado refleje la asociatividad 
-correcta
-</LI>
-<LI>Pase a  <A NAME="tex2html134"
-  HREF="http://coffeescript.org/">CoffeeScript</A>
- el mayor número de rutinas que pueda (fichero
-<code>views/main.coffee</code>)
-</LI>
-<LI>Usa  <A NAME="tex2html135"
-  HREF="http://sass-lang.com/">Sass</A>
- para las hojas de estilo
-</LI>
-<LI>Despliegue la aplicación en Heroku
-</LI>
-<LI>Añada pruebas
-</LI>
-</UL>
-
-<P>
-
-<H4><A NAME="SECTION04230030000000000000">
-Sass</A>
-</H4>
-  
-
-<P>
-
-<OL>
-<LI><A NAME="tex2html136"
-  HREF="http://sass-lang.com/">Sass</A>
-
-</LI>
-<LI><A NAME="tex2html137"
-  HREF="http://sass-lang.com/guide">Sass Basics</A>
-</LI>
-</OL>
-
-<P>
-
-<H4><A NAME="SECTION04230040000000000000">
-Slim</A>
-</H4>
-  
-
-<P>
-
-<OL>
-<LI><A NAME="tex2html138"
-  HREF="http://slim-lang.com/">slim</A>
-
-</LI>
-<LI><A NAME="tex2html139"
-  HREF="http://rdoc.info/gems/slim/frames">Slim docs</A>
-</LI>
-<LI><A NAME="tex2html140"
-  HREF="https://github.com/slim-template/html2slim">html2slim</A>
-</LI>
-</OL>
-
-<P>
-
-<H4><A NAME="SECTION04230050000000000000">
-CoffeeScript</A>
-</H4>
-  
-
-<P>
-
-<OL>
-<LI><A NAME="tex2html141"
-  HREF="http://coffeescriptcookbook.com/">CoffeeScript Cookbook</A>
-</LI>
-<LI><A NAME="tex2html142"
-  HREF="http://js2coffee.org/">js2coffee.org</A>
-</LI>
-</OL>
+Cuando la gramática es <A NAME="3459"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+el método 
+de análisis recursivo descendente predictivo no funciona. 
+En ese caso, el procedimiento
+<code>A</code> asociado con <SPAN CLASS="MATH"><IMG
+ WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
+ SRC="img1.png"
+ ALT="$ A$"></SPAN> ciclaría para siempre sin llegar a consumir ningún 
+terminal. 
 
 <P>
 
@@ -326,7 +218,7 @@ CoffeeScript</A>
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1062"
-  HREF="node22.html">Esquemas de Traducción</A>
+  HREF="node22.html">Práctica: Analizador Descendente Predictivo</A>
 <B>Sup:</B> <A NAME="tex2html1056"
   HREF="node18.html">Analizadores Descendentes Predictivos</A>
 <B> Ant:</B> <A NAME="tex2html1050"
